[project]
authors = [
  { name = "Johannes Köster", email = "johannes.koester@tu-dortmund.de"}
]
description = "A YAML template engine with Python expressions"
license = "MIT"
name = "yte"
readme = "README.md"
version = "1.9.0"
requires-python = ">=3.7,<4.0"
dependencies = [
  "argparse-dataclass>=1.0.0",
  "dpath >=2.1,<3.0",
  "pyyaml >=6.0,<7.0",
]

[project.urls]
repository = "https://github.com/yte-template-engine/yte"
homepage = "https://github.com/yte-template-engine/yte"

[project.scripts]
yte = "yte.cli:main"

[dependency-groups]
dev = [
  "black",
  "coverage[toml]",
  "flake8",
  "flake8-bugbear",
  "pytest",
  "numpy >=2.0; python_version >='3.10'",
  "numpy <2.0; python_version <'3.10'",
]

[tool.coverage.run]
omit = [".*", "*/site-packages/*"]

[tool.coverage.report]
# exclude CLI handling lines. They cannot be captured properly by coverage, but we have a testcase for them.
exclude_lines = [
  "yaml\\.dump\\(result, outfile\\)",
  "process_yaml\\(sys\\.stdin, outfile=sys\\.stdout\\)",
  "parser = get_argument_parser()",
  "args = parser\\.parse_args\\(\\)",
  "Cli\\(args\\)\\.handle_args\\(\\)",
]
omit = ["tests.py"]
fail_under = 100

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"